--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.springframework.samples</groupId>
   <artifactId>SalesTax-Spring</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+	<!-- Adding comments to pom.xml -->  
   <properties>
 
 		<!-- Generic properties -->
